--- a/index.html
+++ b/index.html
@@ -1,31 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Memory Games</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gender Detector</title>
-    <link rel="stylesheet" href="main.css">
-    <script defer src="app.js"></script>
-</head>
-
-<body>
-    <div class="container">
-        <div class="card" data-tilt>
-            <span class="blue heading">Gender </span> <span class="pink heading">Detector</span><br>
-            <input class="name-input" type="text" id="name-input" placeholder="Enter your name here..."><br>
-            <button id="submit-btn" class="submit-btn">Tell My Gender...</button>
-            <p class="result name"></p>
-            <p class="result gender"></p>
-            <p class="result probability"></p>
-            <p class="result count"></p>
-            <p class="msg-txt"></p>
-        </div>
+    <link rel="stylesheet" href="./main.css" />
+  </head>
+  <body>
+    <h1>MEMORY GAME</h1>
+    <div class="cards" onclick="flipCard(this)">
+      <div class="row">
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+      </div>
+      <div class="row">
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+      </div>
+      <div class="row">
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+      </div>
+      <div class="row">
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+        <div
+          class="card color-hidden"
+          onclick="onCardClicked(event)"
+        ></div>
+      </div>
     </div>
-
-    <script src="index.js"></script>
-
-</body>
-
+    <script src="./index.js"></script>
+  </body>
 </html>
